crates/biome_html_parser/tests/html_specs/ok/svelte/each_with_key.svelte
{#each items as item (item.id)}
  <div>{item.name}</div>
{/each}
