crates/biome_html_parser/tests/html_specs/error/svelte/directives/animate_missing_name.svelte
{#each list as item (item)}
  <li animate:>{item}</li>
{/each}
